changed file names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script src="button2.js"></script>
   <script src="switch.js"></script>
   <script src="room.js"></script>
-  <script src="home2.js"></script>
+  <script src="home.js"></script>
   <script src="app.js"></script>
   <script src="spec.js"></script>
 </body>
